fix broken layout in codebutton window

--- a/src/sass/components/_plugins.scss
+++ b/src/sass/components/_plugins.scss
@@ -222,8 +222,6 @@
     }
 
     .buttons {
-        > input {
-            margin-left: .5em;
-        }
+        white-space: nowrap;
     }
 }
